\name{NEWS}
\title{brms News}
\encoding{UTF-8}

\section{CHANGES IN VERSION 2.2.0++}{
  \subsection{BUG FIXES}{
    \itemize{
      \item Fix a problem in the Stan code generation 
      of distributional \code{beta} models thanks to 
      Hans van Calster. (#404)
    }
  }
}

\section{CHANGES IN VERSION 2.2.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Specify custom response distributions with
      function \code{custom_family}. (#381)
      \item Model missing values and measurement error in 
      responses using the \code{mi} addition term. (#27, #343)
      \item Allow missing values in predictors using \code{mi} 
      terms on the right-hand side of model formulas. (#27) 
      \item Model interactions between the special predictor
      terms \code{mo}, \code{me}, and \code{mi}. (#313)
      \item Introduce methods \code{model_weights} and
      \code{loo_model_weights} providing several options
      to compute model weights. (#268)
      \item Introduce method \code{posterior_average} to
      extract posterior samples averaged across models. (#386)
      \item Allow hyperparameters of group-level effects
      to vary over the levels of a categorical covariate 
      using argument \code{by} in function \code{gr}. (#365)
      \item Allow predictions of measurement-error models
      with new data. (#335)
      \item Pass user-defined variables to Stan via 
      \code{stanvar}. (#219, #357)
      \item Allow ordinal families in mixture models. (#389)
      \item Model covariates in multi-membership structures
      that vary over the levels of the grouping factor
      via \code{mmc} terms. (#353)
      \item Fit shifted log-normal models via
      family \code{shifted_lognormal}. (#218)
      \item Specify nested non-linear formulas.
      \item Introduce function \code{make_conditions} to ease 
      preparation of conditions for \code{marginal_effects}.
    }
  }
  \subsection{OTHER CHANGES}{
    \itemize{