@@ -2,8 +2,8 @@ Package: brms
 Encoding: UTF-8
 Type: Package
 Title: Bayesian Regression Models using 'Stan'
-Version: 2.2.1
-Date: 2018-04-19
+Version: 2.2.2
+Date: 2018-04-26
 Authors@R: person("Paul-Christian", "Bürkner", email = "paul.buerkner@gmail.com",
   role = c("aut", "cre"))
 Depends: 
@@ -40,6 +40,7 @@ Suggests:
     MCMCglmm,
     ape,
     arm,
+    digest,
     R.rsp,
     knitr,
     rmarkdown
